--- a/views/scissors.erb
+++ b/views/scissors.erb
@@ -7,12 +7,9 @@
   </head>
 
   <body>
+  <h2> We played paper! </h2>
+  <h2> They played <%= @computer_choice%>! </h2>
+  <h2> We <%= @outcome %> </h2>
 
-    <div><a href="/rock">Play Rock</a></div>
-    <div><a href="/paper">Play Paper</a></div>
-    <div><a href="/scissors">Play Scissors</a></div>
-    
-    <%= yield %>
-
-  </body>
+  <a href="/"> Rules</a>
 </html>
