--- a/views/homepage.erb
+++ b/views/homepage.erb
@@ -60,6 +60,7 @@
 
 <p> Originating from China and Japan, other names for the game in the English-speaking world include roshambo and other orderings of the three items, with "rock" sometimes being called "stone". </p>
 
-<img src = "image/Rock-paper-scissors.svg.png" alt = "Rock-Paper-Scissors"> 
+<img src="image/Rock-paper-scissors.jpg" alt = "Rock-Paper-Scissors"> 
+
 </body>
 </html>
