--- a/views/scissors.erb
+++ b/views/scissors.erb
@@ -7,7 +7,7 @@
   </head>
 
   <body>
-  <h2> We played paper! </h2>
+  <h2> We played scissors! </h2>
   <h2> They played <%= @computer_choice%>! </h2>
   <h2> We <%= @outcome %> </h2>
 
